<resources>

    <!-- Strings Autenticacion -->

    <string name="app_name">TesisApp</string>
    <string name="login">Autenticación</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="registrar">Registrarse</string>

    <!-- Strings Principal -->

    <string name="videos">Videos</string>
    <string name="terapia">Fisioterapia</string>
    <string name="chat">Chat</string>
    <string name="avance">Registro de avance</string>

    <string name="galeria">Galeria</string>

    <string name="subir">Subir Video</string>

    <string name="ej1">Ejemplo #1</string>
    <string name="ej2">Ejemplo #2</string>
    <string name="ej3">Ejemplo #3</string>
    <string name="ej4">Ejemplo #4</string>
    <string name="ej5">Ejemplo #5</string>
    <string name="ej6">Ejemplo #6</string>
    <string name="ej7">Ejemplo #7</string>
    <string name="ej8">Ejemplo #8</string>
    <string name="ej9">Ejemplo #9</string>
    <string name="ej10">Ejemplo #10</string>

    <string name="nombre">Nombre</string>
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="contacto">Contacto</string>
    <string name="enviar">Enviar</string>

    <string name="Iniciar">Iniciar</string>
    <string name="Reiniciar">Reiniciar Contadores</string>
    <string name="Parar">Parar</string>




</resources>