<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulpastel2"
    tools:context=".login">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="200dp"
        android:textAlignment="center"
        android:textSize="40dp"/>

    <EditText
        android:id="@+id/txtlogusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:ems="10"

        android:hint="@string/usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtlogclave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:ems="10"

        android:hint="@string/clave"
        android:inputType="textPersonName" />

    <ImageButton
        android:id="@+id/btnlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:background="@color/azulpastel2"
        android:foregroundGravity="center"
        />
</RelativeLayout>