<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Galeria">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/galeria"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />


                <VideoView
                    android:id="@+id/Ej1"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/rojooscuro"
                    android:layout_marginTop="50dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:text="@string/ej1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />

                <VideoView
                    android:id="@+id/Ej2"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:backgroundTint="@color/rojooscuro"
                    android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ej2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />

                <VideoView
                    android:id="@+id/Ej3"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:backgroundTint="@color/rojooscuro"
                    android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ej3"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />


                <VideoView
                    android:id="@+id/Ej4"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:backgroundTint="@color/rojooscuro"
                    android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ej4"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />


                <VideoView
                    android:id="@+id/Ej5"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:backgroundTint="@color/rojooscuro"
                    android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ej5"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />


                <VideoView
                    android:id="@+id/Ej6"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:backgroundTint="@color/rojooscuro"
                    android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ej6"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />


                <VideoView
                    android:id="@+id/Ej7"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:backgroundTint="@color/rojooscuro"
                    android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ej7"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />


                <VideoView
                    android:id="@+id/Ej8"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:backgroundTint="@color/rojooscuro"
                    android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ej8"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />


                <VideoView
                    android:id="@+id/Ej9"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:backgroundTint="@color/rojooscuro"
                    android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ej9"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />


                <VideoView
                    android:id="@+id/Ej10"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:backgroundTint="@color/rojooscuro"
                    android:layout_marginTop="50dp"
                    />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ej10"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />


        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/subirvideo"
        android:layout_width="98dp"
        android:layout_height="83dp"
        android:layout_marginStart="302dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/subir"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/subir" />


</androidx.constraintlayout.widget.ConstraintLayout>