<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacto"
    android:background="@color/rojooscuro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/contacto"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:layout_marginTop="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <EditText
                android:id="@+id/nombreContacto"
                android:layout_width="match_parent"
                android:layout_height="70dp"

                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/asunto"
                android:layout_marginTop="20dp"

                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <EditText
                android:id="@+id/asuntoContacto"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensaje"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <EditText
                android:id="@+id/mensajeContacto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/mensaje"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                tools:ignore="EditableContentDescCheck"
                android:autofillHints="" />

            <Button
                android:id="@+id/btncontacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/enviar"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>