<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/terapia"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/imgvideo"
                android:layout_width="160dp"
                android:layout_height="156dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/videos"

                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/videos"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/imgterapia"
                android:layout_width="160dp"
                android:layout_height="156dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/terapia" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avance"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/imgchat"
                android:layout_width="160dp"
                android:layout_height="156dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/chat"

                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chat"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

